unpackaged/main/default/objects/breadwinner_ns__BW_Package__c/breadwinner_ns__BW_Package__c.object-meta.xml
<CustomObject>
    <label>NetSuite Package</label>
    <nameField>
        <label>Package #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>