unpackaged/main/default/objects/breadwinner_ns__BW_Package__c/fields/breadwinner_ns__Item_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Item_Fulfillment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Fulfillment</label>
    <referenceTo>breadwinner_ns__BW_Item_Fulfillment__c</referenceTo>
    <relationshipLabel>NetSuite Packages</relationshipLabel>
    <relationshipName>BWPackages</relationshipName>
    <type>Lookup</type>
</CustomField>