unpackaged/main/default/objects/breadwinner_ns__BW_Package__c/fields/breadwinner_ns__PackageDescr__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PackageDescr__c</fullName>
    <label>Package Contents Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>