unpackaged/main/default/objects/breadwinner_ns__BW_Package__c/fields/breadwinner_ns__View_Tracking_Info__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__View_Tracking_Info__c</fullName>
    <label>View Tracking Info</label>
    <type>Url</type>
</CustomField>