unpackaged/main/default/objects/breadwinner_ns__BW_Package__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Item_Fulfillment__c</columns>
    <columns>breadwinner_ns__PackageWeight__c</columns>
    <columns>breadwinner_ns__PackageDescr__c</columns>
    <columns>breadwinner_ns__PackageTrackingNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>